2009-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed "Bug 465222 -
	"Insert matching brace" - no newlines please!".

2009-01-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed possible null
	reference.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Track changes in command names.
	Patch by Vadim Chekan.

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Add/remove breakpoints
	when clicking on the icon bar.

2009-01-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed possible null
	ref. exception.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed 'Bug 463881 -
	Type navigator does not work with attributes'.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on on the fly
	type resolving.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed 'Bug 456429 -
	Search and replace broken again'.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/DebugValueWindow.cs:
	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: TooltipWindow has been
	moved to MD.Components.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.mdp: All projects now require fx 3.5.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml:
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added command for