@@ -1,3 +1,8 @@
+2009-01-15  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: handled unlikly null
+	ref.
+
 2009-01-14  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed "Bug 465222 -
